--- a/css/styles.css
+++ b/css/styles.css
@@ -114,6 +114,10 @@ p {
   gap: 32px;
 }
 
+.header-icons {
+  fill: var(--color-primary-blue-dark);
+}
+
 .header-nav {
   display: flex;
   align-items: center;
@@ -246,6 +250,10 @@ p {
   flex-basis: 316px;
   height: 181px;
 }
+
+.reasons-icons {
+  fill: var(--color-primary-blue-light);
+}
 .reason {
   line-height: 1.3;
 }
@@ -268,9 +276,42 @@ p {
   display: flex;
   justify-content: space-between;
 }
+
+.procedure {
+  flex-basis: calc((100% - 32px) / 3);
+  border-radius: 4px 120px;
+  background-image: linear-gradient(
+    180deg,
+    rgba(1, 28, 68, 0) 47.4%,
+    rgba(1, 28, 68, 0.73) 82.66%,
+    #011c44 99.06%
+  );
+  height: 456px;
+}
+
+.carousel-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid var(--color-primary-blue-dark);
+  border-radius: 50%;
+  width: 44px;
+  height: 44px;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.carousel-button:hover {
+  fill: var(--color-primary-light);
+  background-color: var(--color-primary-blue-light);
+  border: 1px solid var(--color-primary-light);
+}
+
 .procedure-name {
   color: var(--color-primary-blue-dark);
   font-size: 22px;
+  text-align: center;
+  justify-content: start;
 }
 
 /* location */
@@ -335,4 +376,8 @@ p {
   display: flex;
   padding: 0;
   gap: 16px;
+}
+
+.footer-icons {
+  fill: var(--color-primary-light);
 }
